--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,25 @@
 header{
-  background-image:url("../images/beautiful-starry-sky.jpg");
+  background-image:url("../img/beautiful-starry-sky.jpg");
   background-size:cover;
   background-repeat:no-repeat;
   color:white;
-  padding-bottom:150px;
-
-}
-
-header{
+  /*padding-bottom:150px;*/
   width:100%;
   margin:0 auto;
+  /*padding:30px;*/
   text-algin:center;
+  font-family: 'Audiowide', cursive;
+
 
 }
+
+/*header{
+  width:100%;
+  margin:0 auto;
+  padding:30px;
+  text-algin:center;
+
+}*/
 
 header div{
   width:40%;
@@ -20,13 +27,22 @@ header div{
   text-align:center;
 }
 a{
-  color:#000;
-  text-decoration:none;
+  text-decoration: none;
+  color:white;
+
+}
+
+a:hover{
+  text-decoration:none !important;
+  color:black !important;
+}
+.clearfix {
+  clear:both;
 }
 nav{
-  margin-bottom:150px;
-  font-size:30px;
+  font-size:36px;
   text-decoration:none;
+  font-family: 'Audiowide', cursive;
 
 }
 nav li{
@@ -37,11 +53,27 @@ nav h1{
   float:left;
 }
 
+.navBg {
+  background-color:rgba(0,0,0,0.3);
+  padding:13px;
+}
+
+.navBg li a {
+  color:#FFF;
+  text-decoration: none;
+  font-size:26px;
+}
+.navBg li a:hover {
+  /*color:#ffaa00;*/
+  text-decoration: none;
+}
 
 .about{
   padding:20px;
 }
-
+.la{
+  padding:73px;
+}
 header h2{
   font-size:350%;
 }
@@ -53,13 +85,16 @@ header p{
 .clearfix::after{
   display:block;
   content:"";
-  clear:both;*/
-}
+  clear:both;
+}*/
 
-.button{
-  padding:15px 30px;
-  border-radius:7.5px;
-  background-color:red;
+a.button{
+  padding:5px 11px;
+  border-radius:6px;
+  background-color:#ffaa00;
+  font-family: 'Audiowide', cursive;
+  color:#fff;
+  font-size:20px;
 }
 /*MY HEADER*/
 
@@ -67,10 +102,15 @@ header p{
 .max{
   width:80%;
   height:50%;
+  border-radius:50%;
 
 }
 main{
   padding:20px;
+}
+
+.col-md-6{
+  font-family: 'Audiowide', cursive;
 }
 
 section{
@@ -80,10 +120,94 @@ section{
 #work{
   text-align:center;
   background-color:lightgray;
-  padding-bottom:;
-  
+  padding-bottom:320px;
 }
-/*My MAIn ENDS HERE*/
+/*
+#boxes{
+  background-color:lightgray;
+  padding:20px 40px 20px 40px;
+}
+
+#boxes ul{
+  display:table;
+}
+
+#boxes li{
+  background-color:white;
+  width:calc(100% / 3 - 80px);
+  display:inline-table;
+  padding:20px 10px 50px 10px;
+  box-sizing:border-box;
+  margin:10px;
+  border-radius:15px;
+
+  }*/
+
+.pic{
+  width:300px;
+  height:300px;
+}
+
+.box{
+  background-color:white;
+  border-radius:10px;
+  padding:20px;
+  transition:4s;
+  color:black;
+  background-color:rgba(0,0,0,0.3);
+  text-decoration:none;
+
+}
+.box:hover{
+  opacity:0.8;
+  background-color:#225;
+}
+.buttonCamel{
+  border-radius:15px;
+  padding:15px;
+  background-color:#ffaa00;
+  font-family: 'Audiowide', cursive;
+  color:white;
+  font-size:20px;
+}
+
+a.buttonCamel:hover{
+  text-decoration:none;
+
+
+}
+
+.responsive{
+  float:left;
+  padding: 0 20px;
+  border-radius:10px;
+}
+.img{
+  border-radius:20px;
+}
+
+.work{
+  font-family: 'Audiowide', cursive;
+  font-size:70px;
+}
+.p{
+  font-family: 'Audiowide', cursive;
+  font-size:25px;
+}
+/*My MAIN ENDS HERE*/
+
+
+/*MY FOOTER START HERE!*/
+footer i{
+  padding-right:10px;
+}
+footer{
+  font-size:200%;
+  text-align:center;
+  background-color:black;
+  padding:50px;
+}
+/*MY FOOTER ENDS HERE*/
 /*#review{*/
   background-image: url('../images/fireworks21.jpg');
   background-size: cover;
